@@ -1,3 +1,9 @@
+2007-06-30  Jorn Baayen  <jorn@openedhand.com>
+
+	* libgssdp/gssdp-resource-browser.c: (resource_available):
+
+	Use SoupDate for Expires header support.
+
 2007-06-13  Ross Burton  <ross@openedhand.com>
 
 	* configure.ac:
